--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,15 @@ Thumbs.db
 # Eclipse project files
 .classpath
 .project
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
