--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 buildscript {
-    ext.gradle_version = '3.1.4'
+    ext.gradle_version = '3.5.1'
 
     repositories {
         jcenter()
@@ -22,6 +22,7 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.10.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
